<resources>
    <string name="app_name">GPS Tracker</string>
    <string name="server_client_id">123</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_mobile">Mobile Number</string>
    <string name="prompt_otp">Enter OTP</string>
    <string name="prompt_pass">Enter new Password</string>
    <string name="prompt_confirmpass">Enter confirm Password</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="create_new">Click here for register</string>
    <string name="not_register">Not Register?</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="name_error">Please enter your name</string>
    <string name="phone_error">Please enter your phone number</string>
    <string name="email_error">Please enter your email address</string>
    <string name="mobile_error">Please enter your mobile number</string>
    <string name="otp_error">Please enter your otp number</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_mobile">This mobile number is invalid</string>
    <string name="error_invalid_otp">This otp number is invalid</string>
    <string name="error_invalid_pass">This password  is not proper</string>
    <string name="error_invalid_confirmpass">Password is not matching</string>
    <string name="password_error">Please enter a proper password</string>
    <string name="password_con_error">Please enter a proper confirm password</string>
    <string name="error_invalid_password">Please enter a minimum password of 5 characters</string>
    <string name="otp_title">Please enter the 4 digit verification code</string>
    <string name="otp_button_text">VERIFY</string>
    <string name="resend_msg">Didn’t receive the OTP?</string>
    <string name="resend_again_msg">Resend again</string>
    <string name="sent_to_91_xxxx_xxx">sent to +91 </string>

    <string name="service_already_running">Service is already running</string>
    <string name="service_start_successfully">You are  successfully in</string>
    <string name="service_stop_successfully">You are  successfully out</string>
    <string name="gps_enable">GPS enable</string>
    <string name="please_turn_on_gps">Please turn on GPS</string>
    <string name="ok">Ok</string>
</resources>