<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_back"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="4"
        android:padding="16dp"
        android:gravity="center">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <androidx.cardview.widget.CardView xmlns:Card_View="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="10dp"
                Card_View:cardCornerRadius="5dp"
                Card_View:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_50sdp"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:clipToPadding="false"
                        android:paddingTop="@dimen/_5sdp"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/mobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:hint="@string/prompt_mobile"
                            android:inputType="number"
                            android:maxLength="10"
                            android:maxLines="1"
                            android:paddingStart="5dp"
                            android:paddingLeft="@dimen/_10sdp"
                            android:paddingRight="@dimen/_10sdp"
                            android:singleLine="true"
                            android:textColorHint="@color/black"
                            android:textCursorDrawable="@color/black"
                            android:textSize="@dimen/_12ssp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:layout_marginTop="5dp"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="@string/prompt_password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:paddingStart="5dp"
                            android:paddingLeft="5dp"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>
                    <TextView
                        android:id="@+id/tvForgotPassword"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:gravity="end"
                        android:textColor="@color/blue_500"
                        android:textSize="@dimen/_12ssp"
                        android:text="Forgot password?" />
                    <Button
                        android:id="@+id/login"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="20dp"
                        android:background="@drawable/bg_gradient_primary_capsule_button"
                        android:text="@string/login"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>

        <ImageView
            android:id="@+id/profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-50dp"
            android:background="@drawable/round_background"
            android:padding="15dp"
            android:src="@drawable/user" />
    </RelativeLayout>
</LinearLayout>