<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ForgotPasswordActivity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:src="@drawable/ic_arrow_back"
                android:tint="@color/grey_60" />

            <TextView
                android:id="@+id/tvForgottitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivBack"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="Change password"
                android:textColor="@color/grey_60"
                android:gravity="center"
                android:textSize="@dimen/_25ssp"
                android:textStyle="bold" />
            <ImageView
                android:id="@+id/ivImageForgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvForgottitle"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:src="@drawable/forgot" />
            <TextView
                android:id="@+id/tvForgotdesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivImageForgot"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:text="We have received a request to reset your password.\nyou can reset your password using this otp"
                android:textColor="@color/grey_60"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_below="@+id/tvForgotdesc"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <androidx.cardview.widget.CardView xmlns:Card_View="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:padding="10dp"
                    Card_View:cardCornerRadius="5dp"
                    Card_View:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/otpError"
                            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_15sdp"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:layout_marginRight="@dimen/_15sdp"
                            android:clipToPadding="false"
                            android:paddingTop="@dimen/_5sdp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/tvotp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:hint="@string/prompt_otp"
                                android:inputType="number"
                                android:maxLength="10"
                                android:maxLines="1"
                                android:paddingStart="5dp"
                                android:paddingLeft="@dimen/_10sdp"
                                android:paddingRight="@dimen/_10sdp"
                                android:singleLine="true"
                                android:textColorHint="@color/black"
                                android:textCursorDrawable="@color/black"
                                android:textSize="@dimen/_12ssp" />

                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/passError"
                            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_15sdp"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:layout_marginRight="@dimen/_15sdp"
                            android:clipToPadding="false"
                            android:paddingTop="@dimen/_5sdp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:hint="@string/prompt_pass"
                                android:inputType="textPassword"
                                android:maxLength="10"
                                android:maxLines="1"
                                android:paddingStart="5dp"
                                android:paddingLeft="@dimen/_10sdp"
                                android:paddingRight="@dimen/_10sdp"
                                android:singleLine="true"
                                android:textColorHint="@color/black"
                                android:textCursorDrawable="@color/black"
                                android:textSize="@dimen/_12ssp" />

                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/confirmPassError"
                            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_15sdp"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:layout_marginRight="@dimen/_15sdp"
                            android:clipToPadding="false"
                            android:paddingTop="@dimen/_5sdp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/confirm"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:hint="@string/prompt_confirmpass"
                                android:inputType="textPassword"
                                android:maxLength="10"
                                android:maxLines="1"
                                android:paddingStart="5dp"
                                android:paddingLeft="@dimen/_10sdp"
                                android:paddingRight="@dimen/_10sdp"
                                android:singleLine="true"
                                android:textColorHint="@color/black"
                                android:textCursorDrawable="@color/black"
                                android:textSize="@dimen/_12ssp" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/login"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_margin="20dp"
                            android:background="@drawable/bg_gradient_primary_capsule_button"
                            android:text="Continue"
                            android:textColor="@android:color/white"
                            android:textSize="16sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>